# PySherlock

./: .gitignore  Dockerfile  README.md  app_runner.py  pyproject.toml  test_connection.py  test_gpt_models.py  test_gpt_models2.py  v2.py
.github/workflows/: ci.yml
demo/: failing_command.py
src/pysherlock/: __init__.py  cli.py  models.py  redaction.py  report.py  runner.py
tests/: test_report.py  test_runner.py
