[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "pysherlock"
version = "0.1.0"
description = "Evidence-first debugging control plane for local repositories"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
pysherlock = "pysherlock.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
